# 6502

./: .gitignore  6502  CMakeLists.txt  LICENSE  Makefile  README.md  codecov.yml  main.c
.github/workflows/: bin.yml  coverage.yml  main.yml  release.yml
app/: 6502.c  6502_disasm.c  CMakeLists.txt  main_app.c
src/: CMakeLists.txt  bus.c  bus.h  constants.c  constants.h  cpu.c  cpu.h  disassembler.c  disassembler.h  main.c  main.h  opcodes.c  opcodes.h  program.h  ray.c  ray.h  sdl.c  sdl.h
test/: CMakeLists.txt  bus_test.c  cpu_test.c  disassembler_test.c  opcodes_test.c  program_test.c
test/opcodes/: CMakeLists.txt  adc_test.c  and_test.c  asl_test.c  bcc_test.c  bcs_test.c  beq_test.c  bit_test.c  bmi_test.c  bne_test.c  bpl_test.c  brk_test.c  bvc_test.c  bvs_test.c  clc_test.c  cld_test.c  cli_test.c  clv_test.c  cmp_test.c  cpx_test.c  cpy_test.c  dec_test.c  dex_test.c  dey_test.c  eor_test.c  inc_test.c  inx_test.c  iny_test.c  jmp_test.c  jsr_test.c  lda_test.c  ldx_test.c  ldy_test.c  lsr_test.c  nop_test.c  ora_test.c  pha_test.c  php_test.c  pla_test.c  plp_test.c  (+17 more)
test/unity/: CMakeLists.txt
